--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>it.lettuce</groupId>
     <artifactId>telegrambot-template</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <dependencies>
         <dependency>
